k8s/base/app2/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  namespace: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        image: harbor.atoy.dev/public/istio-demo-app:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
