k8s/base/app2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: app2
  labels:
    app: demo
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: demo
  type: ClusterIP
