k8s/base/app2/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app2-vs
  namespace: app2
spec:
  gateways:
  - istio-system/main
  hosts:
  - app2.example.com
  http:
  - route:
    - destination:
        host: demo.app2.svc.cluster.local
        port:
          number: 8080
